--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 
 	"dependencies": {
 		"next": "14.2.3",
+		"preline": "^2.1.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
@@ -13,6 +14,7 @@
 	},
 
 	"devDependencies": {
+		"@tailwindcss/forms": "^0.5.7",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
