--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
 	"version": "0.0.0",
 
 	"dependencies": {
+		"chalk": "^5.3.0",
 		"next": "14.2.3",
 		"preline": "^2.1.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
+		"reflect-metadata": "^0.2.2",
+		"sequelize": "^6.37.3",
+		"sequelize-typescript": "^2.1.6",
+		"sqlite3": "^5.1.7",
 		"zod": "^3.23.8"
 	},
 
 	"devDependencies": {
 		"@tailwindcss/forms": "^0.5.7",
-		"@types/node": "^20",
+		"@types/node": "^20.12.11",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/validator": "^13.11.10",
 		"eslint": "^8",
 		"eslint-config-next": "14.2.3",
 		"postcss": "^8",
