--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
 	"compilerOptions": {
 		"allowJs": true,
+		"emitDecoratorMetadata": true,
 		"esModuleInterop": true,
+		"experimentalDecorators": true,
 		"incremental": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
