--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 	"version": "0.0.0",
 
 	"dependencies": {
+		"chalk": "^5.3.0",
 		"next": "14.2.3",
 		"preline": "^2.1.0",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
+		"sqlite3": "^5.1.7",
 		"zod": "^3.23.8"
 	},
 
