--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
 	"version": "0.0.0",
 
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"chalk": "^5.3.0",
+		"jsonwebtoken": "^9.0.2",
 		"next": "14.2.3",
+		"next-auth": "^4.24.7",
+		"nodemailer": "^6.9.13",
 		"preline": "^2.1.0",
+		"qrcode": "^1.5.3",
 		"react": "^18",
 		"react-dom": "^18",
 		"react-icons": "^5.2.1",
